<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_semester_setting"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginStart="@dimen/item_margin_left"
        android:text="@string/semester_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/divider_semester_setting"
        android:layout_below="@id/tv_semester_setting"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:background="@color/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"/>

    <ImageButton
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:layout_width="24dp"
        android:background="@drawable/ic_navigate_next"
        android:layout_height="24dp"/>


    <TextView
        android:id="@+id/tv_course_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_semester_setting"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:text="@string/course_setting"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/divider_course_setting"
        android:layout_below="@id/tv_course_setting"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:background="@color/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"/>

    <ImageButton
        android:layout_below="@+id/divider_semester_setting"
        android:background="@drawable/ic_navigate_next"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:layout_width="24dp"
        android:layout_height="24dp"/>

    <TextView
        android:id="@+id/tv_show_course_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_course_setting"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:text="@string/show_course_only"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/divider_show_course_setting"
        android:layout_below="@id/tv_show_course_only"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:background="@color/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_course_only"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/divider_course_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_show_time_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_show_course_setting"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:text="@string/show_time"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/divider_show_time"
        android:layout_below="@id/tv_show_time_only"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:background="@color/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_show_time_only"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/divider_show_course_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/tv_wallpaper_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_show_time"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:text="@string/wallpaper_change"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <ImageButton
        android:id="@+id/ib_wallpaper_change"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:background="@drawable/ic_navigate_next"
        android:layout_below="@+id/divider_show_time"
        android:layout_width="24dp"
        android:layout_height="24dp"/>'

    <View
        android:id="@+id/divider_wallpaper_change"
        android:layout_below="@id/tv_wallpaper_change"
        android:layout_marginTop="@dimen/item_ver_margin"
        android:layout_marginStart="@dimen/item_margin_left"
        android:layout_marginEnd="@dimen/item_margin_right"
        android:background="@color/divider"
        android:layout_width="wrap_content"
        android:layout_height="2dp"/>
</RelativeLayout>